src/objects/CAPA__c.object
<CustomObject>
    <description>Future</description>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CAPA_Approvers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CAPA_Approvers2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CAPA_Approvers3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CAPA_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CAPA_Age__c</fullName>
        <formula>IF(ISNULL(Closed_Date__c),TODAY() - DATEVALUE(CreatedDate),Closed_Date__c - DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAPA Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAPA_Phase__c</fullName>
        <label>CAPA Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Investigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CAPA_Risk_Assessment_Required__c</fullName>
        <label>CAPA Risk Assessment Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CAPA_Source__c</fullName>
        <label>CAPA Source</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trigger/Threshold reached</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CAPA_Status__c</fullName>
        <label>CAPA Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inworks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reopen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Void</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <formula>OR(ISPICKVAL( CAPA_Status__c , &apos;Closed&apos;),ISPICKVAL( CAPA_Status__c , &apos;Void&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Containment_Activity__c</fullName>
        <description>This field is created for future functionalities.</description>
        <label>Containment Activity</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Criticality__c</fullName>
        <label>Criticality</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>Business_Entity__c</referenceTo>
        <relationshipName>CAPA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Followers__c</fullName>
        <label>Followers</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Immidiate_Action_Taken__c</fullName>
        <label>Immediate Action Taken</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Is_In_Works__c</fullName>
        <formula>ISPICKVAL( CAPA_Status__c , &apos;Inworks&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is In Works</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Supplier_Name__c</fullName>
        <formula>Manufacturer_Supplier__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manufacturer / Supplier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturer / Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Corrective and Preventive Actions</relationshipLabel>
        <relationshipName>Corrective_and_Preventive_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>proposed capa owner</description>
        <label>New Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Corrective_and_Preventive_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Note_To_Approver__c</fullName>
        <label>Note To Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Occurance_Date__c</fullName>
        <label>Occurrence Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Problem_Statement__c</fullName>
        <label>Problem Statement</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reopen_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reopen By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Corrective_and_Preventive_Actions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reopen_Date__c</fullName>
        <label>Reopen Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reported_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reported By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CAPA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reported_Date__c</fullName>
        <label>Reported Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resolution_Closed_Comment__c</fullName>
        <label>Resolution Closed Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Resolution_Code__c</fullName>
        <label>Resolution Code</label>
        <picklist>
            <picklistValues>
                <fullName>CAPA Workflow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discarded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Action Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Description__c</fullName>
        <label>Risk Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Risk_Occurrence_Name__c</fullName>
        <formula>Risk_Occurrence__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Occurrence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Occurrence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk Occurrence</label>
        <referenceTo>Risk_Occurrence__c</referenceTo>
        <relationshipLabel>Corrective and Preventive Actions</relationshipLabel>
        <relationshipName>Corrective_and_Preventive_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Risk_Priority__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk Priority</label>
        <referenceTo>Risk_Priority__c</referenceTo>
        <relationshipLabel>Corrective and Preventive Actions</relationshipLabel>
        <relationshipName>Corrective_and_Preventive_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Risk_Severity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk Severity</label>
        <referenceTo>Risk_Severity__c</referenceTo>
        <relationshipLabel>Corrective and Preventive Actions</relationshipLabel>
        <relationshipName>Corrective_and_Preventive_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sites_Impacted__c</fullName>
        <label>Site(s) Impacted</label>
        <picklist>
            <picklistValues>
                <fullName>NewYork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tampa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tokyo</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Source_Number__c</fullName>
        <label>Source Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UD_Date10__c</fullName>
        <label>UD_Date10</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UD_Date9__c</fullName>
        <label>UD_Date9</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UD_Long_Text_Area7__c</fullName>
        <label>UD_Long_Text_Area7</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UD_Long_Text_Area8__c</fullName>
        <label>UD_Long_Text_Area8</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UD_Picklist3__c</fullName>
        <label>UD_Picklist3</label>
        <picklist>
            <picklistValues>
                <fullName>FPV1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPV2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPV3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UD_Picklist4__c</fullName>
        <label>UD_Picklist4</label>
        <picklist>
            <picklistValues>
                <fullName>SPV1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPV2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPV3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPV4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UD_Text1__c</fullName>
        <label>UD_Text1</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UD_Text2__c</fullName>
        <label>UD_Text2</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UD_Text_Area5__c</fullName>
        <label>UD_Text_Area5</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UD_Text_Area6__c</fullName>
        <label>UD_Text_Area6</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User_Defined__c</fullName>
        <description>This field is created for future functionalities.</description>
        <label>User Defined</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>CAPA</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CAPA_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Title__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CAPA-{00000}</displayFormat>
        <label>CAPA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corrective and Preventive Actions</pluralLabel>
    <recordTypes>
        <fullName>CAPA</fullName>
        <active>true</active>
        <label>CAPA</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>